<resources>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_item">حول الصنف</string>
    <string name="access_token">148131835624128|-CFjcD4VXjLXhvKzxDiZe621rvk</string>
    <string name="account">الحساب</string>
    <string name="account_excel_template">"ملف الحسابات لابد أن يحتوي على خمسة أعمدة 
 
 إسم الحساب / التلفون / العنوان/رصيد_مدين/رصيد_دائن 
 *** الأرصدة بالعملة المحلية 
"</string>
    <string name="account_group">"تصنيف الحساب "</string>
    <string name="account_name">إسم الحساب</string>
    <string name="account_no">رقم الحساب</string>
    <string name="account_parent">الحساب الرئيسي</string>
    <string name="account_print_remarks" />
    <string name="account_short">ح/</string>
    <string name="account_tree">الدليل المحاسبي</string>
    <string name="account_type">نوع الحساب</string>
    <string name="action_add_printer">AddPrinter</string>
    <string name="action_call">إتصال</string>
    <string name="action_export">حفـظ نسخة إحتياطية</string>
    <string name="action_list">List View</string>
    <string name="action_load">Restore All Messages</string>
    <string name="action_logout">Logout</string>
    <string name="action_move_tr">تحويل من حساب إلى حساب</string>
    <string name="action_print">طباعة</string>
    <string name="action_print_bills">طباعة الفواتير</string>
    <string name="action_print_bills_thermal">طباعة حرارية للفواتير</string>
    <string name="action_print_docs">طباعة السندات</string>
    <string name="action_print_price">طباعة أسعار البيع</string>
    <string name="action_print_th">Add a Printer</string>
    <string name="action_renew">تجديد</string>
    <string name="action_renew_otp">تجديد الرمز</string>
    <string name="action_report_groups">إجمالي التصنيفات</string>
    <string name="action_save_settings">حفظ الإعدادات</string>
    <string name="action_settings">Settings</string>
    <string name="action_settings3">إجمالي المبالغ</string>
    <string name="action_settings5">سداد مبـلغ</string>
    <string name="action_settings6">مشـــاركة</string>
    <string name="action_settings7">إرســال رسالة نصية</string>
    <string name="action_settings8">إغــلاق الـرصيـد</string>
    <string name="action_settings_w">إرسال رسالة واتساب</string>
    <string name="action_sign_in">دخـــول</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_stop_otp">إيقاف الرمز</string>
    <string name="action_swap">تبديل</string>
    <string name="activate">تفعيـل</string>
    <string name="activate_admin">قم بتفعيل مدير النظام أولا</string>
    <string name="activated">تم تفعيله سابقا</string>
    <string name="activation_register_finish">تم تسجيل طلبك..سيتم التواصل معك لاحقا</string>
    <string name="activation_reply">تم تسجيل طلبك بنجاح..سيتم التواصل معك في أقرب وقت...شكرا لتفهمك</string>
    <string name="activation_request">طلب رمز التفعيل</string>
    <string name="activation_request_msg">طلب الإشتراك السنوي</string>
    <string name="activiation_register">تسجيل طلب تفعيل البرنامج</string>
    <string name="activity_home_note">إغلق ثم افتح مرة أخرى</string>
    <string name="add_account_hdr">القيد</string>
    <string name="adv_search">بحث متقدم</string>
    <string name="app_name">محاسب سوفت</string>
    <string name="approval_balance">مصادقة على الحساب واتساب</string>
    <string name="barcode_type">نوع الباركود</string>
    <string name="bill_print_remarks">ملاحظة أسفل الفاتورة</string>
    <string name="bills">فواتير البيع</string>
    <string name="bills2">فواتير الشراء</string>
    <string name="change_email">تغيير الحساب</string>
    <string name="code_page">28</string>
    <string name="credit">لك</string>
    <string name="credit_hdr">دائن</string>
    <string name="cus_limit2">سقف الحساب</string>
    <string name="debit">عليك</string>
    <string name="debit_hdr">مدين</string>
    <string name="default_font_size">15</string>
    <string name="default_paper_size">80</string>
    <string name="default_thermal_no_printed">1</string>
    <string name="excel">إكسـل</string>
    <string name="expenses">النفقات والإيرادات</string>
    <string name="font_size">حجم الخط</string>
    <string name="google_drive_folder">اسم المجلد في جوجل درايف</string>
    <string name="no_printed">عدد نسخ الفاتورة</string>
    <string name="notify_bill_type">نوع صورة الفاتورة</string>
    <string name="offer_to_bill">تحويل إلى فاتورة بيع</string>
    <string name="paper_size">حجم الورق</string>
    <string name="pref_SMS_WA_options">خيارات الإشعارات</string>
    <string name="pref_account_print_summary">ملاحظة أسفل الكشف</string>
    <string name="pref_activation_2" />
    <string name="pref_address">العنوان</string>
    <string name="pref_address_summary">العنوان</string>
    <string name="pref_autoNotify_screen_summary">إظهار الإشعار عند إضافة مبلغ</string>
    <string name="pref_autoNotify_screen_summary_sms_header">إظهار المقدمة والنهاية عند إضافة مبلغ</string>
    <string name="pref_autoSMS_date_screen_summary">تاريخ العملية</string>
    <string name="pref_autoSMS_screen_summary">إرسال رسالة نصية عند الإضافة</string>
    <string name="pref_autoSMS_wa_screen_summary">إرسال واتساب عند الإضافة</string>
    <string name="pref_autobackup_screen">حفظ البيانات يوميا</string>
    <string name="pref_autobackup_screen_summary">حفظ البيانات تلقائيا مرة واحدة باليوم(بشرط تغيرت البيانات)</string>
    <string name="pref_backup">خيارات حفظ البيانات</string>
    <string name="pref_backup_path">مجلد حفظ البيانات</string>
    <string name="pref_backup_pic_path">إضافة الصور</string>
    <string name="pref_backup_time">وقت حفظ البيانات</string>
    <string name="pref_blank_lines">عدد الأسطر الفارغة</string>
    <string name="pref_blank_lines_summary">عدد الأسطر أعلى الصفحة</string>
    <string name="pref_cash_account">حساب الصندوق الإفتراضي</string>
    <string name="pref_cost_avg">متوسط حساب التكلفة</string>
    <string name="pref_credit_summary">دائن</string>
    <string name="pref_debit_summary">مدين</string>
    <string name="pref_default_backup_time">0</string>
    <string name="pref_default_password" />
    <string name="pref_footer2_total">إجمالي العمليات أسفل الحساب</string>
    <string name="pref_group_curr">التصنيفات</string>
    <string name="pref_header_data_sync">خيارات الطباعة</string>
    <string name="pref_header_general">البيانات الشخصية</string>
    <string name="pref_other_closed_year">استعراض سنوات سابقة</string>
    <string name="pref_other_item_end_date">تاريخ الانتهاء للأصناف في الفواتير</string>
    <string name="pref_other_notify_bill_items">تفاصيل الفاتورة</string>
    <string name="pref_other_notify_image">إرفاق صورة فاتورة/سند مع الإشعار</string>
    <string name="pref_other_option_barcode">تفعيل الباركود</string>
    <string name="pref_other_option_item_price">إضافة سعر الصنف تلقائيا في الفاتورة</string>
    <string name="pref_other_option_item_qty">إضافة الكمية(1) تلقائيا في الفاتورة</string>
    <string name="pref_other_option_purchase_tax">إخفاء الضريبة من المشتريات</string>
    <string name="pref_other_option_sales_out_qty">البيع بالكمية سالب</string>
    <string name="pref_other_option_sales_tax">إخفاء الضريبة من المبيعات</string>
    <string name="pref_other_option_whats_bus_title">استخدام واتساب للأعمال</string>
    <string name="pref_other_options">خيارات أخرى</string>
    <string name="pref_other_trans_diff_dates">تعديل تاريخ العملية في القيود</string>
    <string name="pref_other_update_item_price">تحديث أسعار البيع عند إدخال الفاتورة</string>
    <string name="pref_phone">رقم التلفون</string>
    <string name="pref_phone_summary">التلفون</string>
    <string name="pref_print_all_curr">طباعة الحساب بجميع العملات</string>
    <string name="pref_print_balance">إظهار رصيد الحساب آسفل السند</string>
    <string name="pref_print_bill_pages">طباعة كل فاتورة في صفحة</string>
    <string name="pref_print_bill_sign">طباعة التوقيع في الفواتير</string>
    <string name="pref_print_date_profile">إظهار التاريخ</string>
    <string name="pref_print_date_summary">إظهار التاريخ أسفل الطباعة</string>
    <string name="pref_print_end_date">طباعة تاريخ الإنتهاء</string>
    <string name="pref_print_hide_doc_col">إخفاء عمود المستند في الكشف</string>
    <string name="pref_print_num_words">تفقيط الأرقام</string>
    <string name="pref_print_qr_code_summary">طباعة الفاتورة الإلكترونية</string>
    <string name="pref_print_setting">خيارات الطباعة</string>
    <string name="pref_print_sort_summary">من التاريخ الأقدم للأحدث</string>
    <string name="pref_print_sort_title">طباعة البيانات تصاعديا</string>
    <string name="pref_print_user_profile">إظهار البيانات</string>
    <string name="pref_print_user_profile_summary">طباعة البيانات الشخصية</string>
    <string name="pref_security">خيارات الأمان</string>
    <string name="pref_sms_footer">نهاية الرسالة</string>
    <string name="pref_sms_summary">مقدمة الرسالة</string>
    <string name="pref_thermal_balance">إظهار رصيد الحساب آسفل الورقة</string>
    <string name="pref_thermal_bluetooth">بلوتوث</string>
    <string name="pref_thermal_options">الطابعة الحرارية</string>
    <string name="pref_thermal_qty">إظهار إجمالي الكمية أسفل الفاتورة</string>
    <string name="pref_tr_time">إظهار الوقت في شاشة الحساب</string>
    <string name="pref_user_name">الإسم</string>
    <string name="pref_user_name_summary">الإسم</string>
    <string name="pref_user_profile">البيانات الشخصية</string>
    <string name="print">طباعة</string>
    <string name="print_bluetooth">طابعة حرارية</string>
    <string name="remarks_hint">اكتب الملاحظة</string>
    <string name="reminders">التنبيهات</string>
    <string name="remove">حذف</string>
    <string name="report1">تقـرير-مخزون الأصناف</string>
    <string name="report2">تقـرير-حسابات الموردين</string>
    <string name="report3">تقـرير-النفقات/الإيرادات</string>
    <string name="report4">تقــرير-المشتريات</string>
    <string name="report5">تقــرير-المبيعات</string>
    <string name="report6">تقــرير-النفقات والإيرادات</string>
    <string name="report7">تقــرير-الربح والخسارة</string>
    <string name="resourceID_Cancel">إلغـاء</string>
    <string name="resourceID_OK">موافق</string>
    <string name="save">حفـــظ</string>
    <string name="search">بحث</string>
    <string name="share">مشاركة</string>
    <string name="thermal_code_page">رقم اللغة العربية</string>
    <string name="thermal_print_remarks">ملاحظة أسفل الورقة</string>
    <string name="thermal_type">نوع الطابعة</string>
</resources>