<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@android:drawable/ic_menu_search" android:id="@id/search" android:title="@string/search" app:actionViewClass="androidx.appcompat.widget.SearchView" app:showAsAction="always|collapseActionView" />
    <item android:icon="@drawable/pdf" android:id="@id/action4" android:orderInCategory="100" android:title="@string/action_print" app:showAsAction="always" />
    <item android:id="@id/action5" android:orderInCategory="100" android:title="@string/adv_search" app:showAsAction="never" />
    <item android:id="@id/action_thermal" android:orderInCategory="100" android:title="@string/print_bluetooth" app:showAsAction="never" />
    <item android:id="@id/action1" android:orderInCategory="100" android:title="@string/action_settings6" app:showAsAction="never" />
    <item android:icon="@drawable/excel" android:id="@id/excel" android:orderInCategory="100" android:title="@string/excel" app:showAsAction="never" />
    <item android:id="@id/action2" android:orderInCategory="100" android:title="@string/action_settings7" app:showAsAction="never" />
    <item android:id="@id/action2_" android:orderInCategory="100" android:title="@string/action_settings_w" app:showAsAction="never" />
    <item android:id="@id/action_approval" android:orderInCategory="100" android:title="@string/approval_balance" app:showAsAction="never" />
    <item android:id="@id/action3" android:visible="false" android:orderInCategory="100" android:title="@string/action_settings8" app:showAsAction="never" />
    <item android:id="@id/action_move" android:orderInCategory="100" android:title="@string/action_move_tr" app:showAsAction="never" />
    <item android:id="@id/action_print_bills" android:orderInCategory="100" android:title="@string/action_print_bills" app:showAsAction="never" />
    <item android:id="@id/action_print_bills_thermal" android:orderInCategory="100" android:title="@string/action_print_bills_thermal" app:showAsAction="never" />
    <item android:id="@id/action_print_docs" android:orderInCategory="100" android:title="@string/action_print_docs" app:showAsAction="never" />
    <item android:id="@id/action_notification" android:orderInCategory="100" android:title="@string/reminders" app:showAsAction="never" />
    <item android:id="@id/cus_limit" android:orderInCategory="100" android:title="@string/cus_limit2" app:showAsAction="never" />
</menu>