<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference android:icon="@drawable/s_show_info" android:title="@string/pref_print_user_profile_summary" android:key="prefPrintUser" android:defaultValue="false" />
    <SwitchPreference android:icon="@drawable/s_qr" android:title="@string/pref_print_qr_code_summary" android:key="pref_show_qr_code" android:defaultValue="false" />
    <ListPreference android:icon="@drawable/s_blank_lines" android:entries="@array/blankLines" android:title="@string/pref_blank_lines_summary" android:key="prefBlankLines" android:summary="@string/pref_blank_lines_summary" android:defaultValue="1" android:positiveButtonText="@null" android:negativeButtonText="@null" android:entryValues="@array/blankLinesValues" />
    <SwitchPreference android:icon="@drawable/s_print_sort" android:title="@string/pref_print_sort_title" android:key="prefPrintSort" android:summary="@string/pref_print_sort_summary" android:defaultValue="true" />
    <SwitchPreference android:icon="@drawable/s_pc" android:title="@string/pref_print_date_profile" android:key="prefPrintDate" android:summary="@string/pref_print_date_summary" android:defaultValue="true" />
    <SwitchPreference android:icon="@drawable/s_currency2" android:title="@string/pref_print_all_curr" android:key="pref_print_all_curr" android:defaultValue="false" />
    <EditTextPreference android:icon="@drawable/s_debit" android:layout_width="fill_parent" android:layout_height="fill_parent" android:maxLines="1" android:singleLine="true" android:selectAllOnFocus="true" android:capitalize="words" android:title="@string/pref_debit_summary" android:key="pref_debit" android:summary="@string/pref_debit_summary" android:defaultValue="@string/debit_hdr" android:positiveButtonText="@string/resourceID_OK" android:negativeButtonText="@string/resourceID_Cancel" android:inputType="textCapWords" />
    <EditTextPreference android:icon="@drawable/s_credit" android:maxLines="1" android:singleLine="true" android:selectAllOnFocus="true" android:capitalize="words" android:title="@string/pref_credit_summary" android:key="pref_credit" android:summary="@string/pref_credit_summary" android:defaultValue="@string/credit_hdr" android:positiveButtonText="@string/resourceID_OK" android:negativeButtonText="@string/resourceID_Cancel" android:inputType="textCapWords" />
    <EditTextPreference android:icon="@drawable/p_tr_remarks" android:hint="@string/remarks_hint" android:maxLines="2" android:singleLine="true" android:selectAllOnFocus="true" android:capitalize="words" android:title="@string/pref_account_print_summary" android:key="pref_print_remarks" android:summary="@string/pref_account_print_summary" android:defaultValue="@string/account_print_remarks" android:positiveButtonText="@string/resourceID_OK" android:negativeButtonText="@string/resourceID_Cancel" android:inputType="textCapWords" />
    <EditTextPreference android:icon="@drawable/s_ther_remarks" android:maxLines="2" android:singleLine="true" android:selectAllOnFocus="true" android:capitalize="words" android:title="@string/bill_print_remarks" android:key="pref_bill_remarks" android:summary="@string/bill_print_remarks" android:defaultValue="@string/account_print_remarks" android:positiveButtonText="@string/resourceID_OK" android:negativeButtonText="@string/resourceID_Cancel" android:inputType="textCapWords" />
    <SwitchPreference android:icon="@drawable/p_tr_remarks" android:title="@string/pref_print_balance" android:key="pref_print_balance" android:defaultValue="false" />
    <SwitchPreference android:icon="@drawable/s_alpha" android:title="@string/pref_print_num_words" android:key="pref_num_words" android:defaultValue="false" />
    <SwitchPreference android:icon="@drawable/s_pc" android:title="@string/pref_print_hide_doc_col" android:key="pref_hide_doc_col" android:defaultValue="true" />
    <SwitchPreference android:icon="@drawable/s_pc" android:title="@string/pref_footer2_total" android:key="prefOthers_footer2_total" android:defaultValue="false" />
    <SwitchPreference android:icon="@drawable/s_pc" android:title="@string/pref_print_end_date" android:key="prefOthers_print_end_date" android:defaultValue="false" />
    <SwitchPreference android:icon="@drawable/s_pc" android:title="@string/pref_print_bill_pages" android:key="prefOthers_print_bill_pages" android:defaultValue="false" />
    <SwitchPreference android:icon="@drawable/s_sign" android:title="@string/pref_print_bill_sign" android:key="pref_print_bill_sign" android:defaultValue="false" />
</PreferenceScreen>