<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ListPreference android:icon="@drawable/s_paper_size" android:entries="@array/thermal_size" android:title="@string/paper_size" android:key="prefPaperSize" android:defaultValue="@string/default_paper_size" android:entryValues="@array/thermal_size_values" />
    <SwitchPreference android:icon="@drawable/s_bluetooth" android:title="@string/pref_thermal_bluetooth" android:key="prefThermalBluetooth" android:defaultValue="true" />
    <ListPreference android:icon="@drawable/s_ther_type" android:entries="@array/thermal_type" android:title="@string/thermal_type" android:key="prefThermalType" android:defaultValue="1" android:entryValues="@array/thermal_type_value" />
    <SwitchPreference android:icon="@drawable/s_qr" android:title="@string/pref_print_qr_code_summary" android:key="pref_show_qr_code" android:defaultValue="false" />
    <EditTextPreference android:icon="@drawable/s_ther_remarks" android:maxLines="2" android:singleLine="true" android:selectAllOnFocus="true" android:capitalize="words" android:title="@string/thermal_print_remarks" android:key="pref_thermal_remarks" android:summary="@string/thermal_print_remarks" android:defaultValue="@string/account_print_remarks" android:positiveButtonText="@string/resourceID_OK" android:negativeButtonText="@string/resourceID_Cancel" android:inputType="textCapWords" />
    <ListPreference android:icon="@drawable/s_font" android:entries="@array/font_size" android:title="@string/font_size" android:key="prefFontSize" android:defaultValue="@string/default_font_size" android:entryValues="@array/font_size_values" />
    <ListPreference android:icon="@drawable/s_no_print" android:entries="@array/thermal_no_printed" android:title="@string/no_printed" android:key="prefNoPrinted" android:defaultValue="@string/default_thermal_no_printed" android:entryValues="@array/thermal_no_printed_values" />
    <SwitchPreference android:icon="@drawable/p_tr_remarks" android:title="@string/pref_thermal_balance" android:key="pref_thermal_balance" android:defaultValue="false" />
    <EditTextPreference android:icon="@drawable/s_ther_remarks" android:singleLine="true" android:selectAllOnFocus="true" android:capitalize="words" android:key="pref_codetable" android:summary="@string/thermal_code_page" android:defaultValue="@string/code_page" android:positiveButtonText="@string/resourceID_OK" android:negativeButtonText="@string/resourceID_Cancel" android:inputType="number" app:dialogLayout="@layout/pref_number_dialog" />
    <SwitchPreference android:icon="@drawable/s_ther_remarks" android:title="@string/pref_thermal_qty" android:key="pref_thermal_qty" android:defaultValue="false" />
</PreferenceScreen>