<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@android:drawable/ic_input_add" android:id="@id/add" android:title="add" app:showAsAction="always" />
    <item android:id="@id/bills" android:title="@string/bills" app:showAsAction="never" />
    <item android:id="@id/bills2" android:title="@string/bills2" app:showAsAction="never" />
    <item android:id="@id/expenses" android:title="@string/expenses" app:showAsAction="never" />
    <item android:id="@id/report1" android:title="@string/report1" app:showAsAction="never" />
    <item android:id="@id/report2" android:title="@string/report2" app:showAsAction="never" />
    <item android:id="@id/report3" android:visible="false" android:title="@string/report3" app:showAsAction="never" />
    <item android:id="@id/report4" android:title="@string/report4" app:showAsAction="never" />
    <item android:id="@id/report5" android:title="@string/report5" app:showAsAction="never" />
    <item android:id="@id/report6" android:title="@string/report6" app:showAsAction="never" />
    <item android:id="@id/report7" android:title="@string/report7" app:showAsAction="never" />
</menu>