<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference android:icon="@drawable/s_auto" android:title="@string/pref_autobackup_screen" android:key="prefAutoBackup" android:summary="@string/pref_autobackup_screen_summary" android:defaultValue="true" />
    <Preference android:icon="@drawable/s_path" android:capitalize="words" android:title="@string/pref_backup_path" android:key="prefBackup_path" android:summary="@string/pref_backup_path" android:defaultValue="@string/pref_default_password" />
    <Preference android:icon="@drawable/s_path" android:capitalize="words" android:title="@string/pref_backup_pic_path" android:key="prefBackup_pic_path" android:defaultValue="@string/pref_default_password" />
    <Preference android:icon="@drawable/s_time" android:capitalize="words" android:title="@string/pref_backup_time" android:key="prefBackup_time_h" android:summary="@string/pref_backup_time" android:defaultValue="@string/pref_default_backup_time" />
    <Preference android:icon="@drawable/s_account" android:capitalize="words" android:title="@string/change_email" android:key="PREF_ACCOUNT_NAME" android:summary="@string/change_email" android:defaultValue="" />
    <Preference android:icon="@drawable/s_drive" android:enabled="false" android:capitalize="words" android:title="@string/google_drive_folder" android:key="google_drive_folder" android:summary="@string/app_name" android:defaultValue="@string/app_name" />
    <SwitchPreference android:icon="@drawable/s_notify" android:title="@string/pref_autoNotify_screen_summary" android:key="prefAutoNotify" android:defaultValue="true" />
</PreferenceScreen>