<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference android:icon="@drawable/s_qty_out" android:title="@string/pref_other_option_sales_out_qty" android:key="prefOthers_sales_out_qty" android:defaultValue="false" />
    <SwitchPreference android:icon="@drawable/s_update_date" android:title="@string/pref_other_trans_diff_dates" android:key="prefOthers_trans_diff_dates" android:defaultValue="false" />
    <ListPreference android:icon="@drawable/s_cash_account" android:title="@string/pref_cash_account" android:key="pref_cash_id" android:summary="@string/pref_cash_account" android:defaultValue="-3" android:positiveButtonText="@null" android:negativeButtonText="@null" />
    <ListPreference android:icon="@drawable/s_average" android:entries="@array/costAvg" android:title="@string/pref_cost_avg" android:key="pref_cost_avg" android:summary="@string/pref_cost_avg" android:defaultValue="1" android:positiveButtonText="@null" android:negativeButtonText="@null" android:entryValues="@array/costAvgValues" />
    <SwitchPreference android:icon="@drawable/s_show_info" android:title="@string/pref_other_closed_year" android:key="prefOthers_closed_year" android:defaultValue="false" />
    <SwitchPreference android:icon="@drawable/s_whatsapp_bus" android:title="@string/pref_other_option_whats_bus_title" android:key="prefOthers_whats_bus" android:defaultValue="false" />
    <Preference android:icon="@drawable/s_hide_info" android:title="@string/pref_activation_2" android:key="prefOthers_activation" android:defaultValue="false" />
    <SwitchPreference android:icon="@drawable/s_barcode" android:title="@string/pref_other_option_barcode" android:key="prefOthers_barcode" android:defaultValue="false" />
    <ListPreference android:icon="@drawable/s_barcode" android:entries="@array/barcode_type" android:title="@string/barcode_type" android:key="pref_barcode_type" android:defaultValue="1" android:positiveButtonText="@null" android:negativeButtonText="@null" android:entryValues="@array/barcode_typeValues" />
    <SwitchPreference android:icon="@drawable/s_hide_info" android:title="@string/pref_other_option_item_price" android:key="prefOthers_item_price" android:defaultValue="false" />
    <SwitchPreference android:icon="@drawable/s_hide_info" android:title="@string/pref_other_option_item_qty" android:key="prefOthers_item_qty" android:defaultValue="false" />
    <SwitchPreference android:icon="@drawable/s_hide_info" android:title="@string/pref_other_update_item_price" android:key="prefOthers_update_item_price" android:defaultValue="true" />
    <SwitchPreference android:icon="@drawable/s_hide_tax_p" android:title="@string/pref_other_option_purchase_tax" android:key="prefOthers_purchases_tax" android:defaultValue="false" />
    <SwitchPreference android:icon="@drawable/s_hide_tax_s" android:title="@string/pref_other_option_sales_tax" android:key="prefOthers_sales_tax" android:defaultValue="false" />
    <SwitchPreference android:icon="@drawable/s_time" android:title="@string/pref_tr_time" android:key="prefOthers_tr_time" android:defaultValue="true" />
    <SwitchPreference android:icon="@drawable/s_hide_info" android:title="@string/pref_other_item_end_date" android:key="prefOthers_item_end_date" android:defaultValue="false" />
</PreferenceScreen>