<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference android:maxLines="1" android:singleLine="true" android:selectAllOnFocus="true" android:capitalize="words" android:title="@string/pref_sms_summary" android:key="prefSMS_header" android:defaultValue="" android:positiveButtonText="@string/resourceID_OK" android:negativeButtonText="@string/resourceID_Cancel" android:inputType="textCapWords" />
    <EditTextPreference android:maxLines="1" android:singleLine="true" android:selectAllOnFocus="true" android:capitalize="words" android:title="@string/pref_sms_footer" android:key="prefSMS_footer" android:defaultValue="" android:positiveButtonText="@string/resourceID_OK" android:negativeButtonText="@string/resourceID_Cancel" android:inputType="textCapWords" />
    <EditTextPreference android:maxLines="1" android:singleLine="true" android:selectAllOnFocus="true" android:capitalize="words" android:title="@string/debit" android:key="prefSMS_debit" android:defaultValue="@string/debit" android:positiveButtonText="@string/resourceID_OK" android:negativeButtonText="@string/resourceID_Cancel" android:inputType="textCapWords" />
    <EditTextPreference android:maxLines="1" android:singleLine="true" android:selectAllOnFocus="true" android:capitalize="words" android:title="@string/credit" android:key="prefSMS_credit" android:defaultValue="@string/credit" android:positiveButtonText="@string/resourceID_OK" android:negativeButtonText="@string/resourceID_Cancel" android:inputType="textCapWords" />
    <SwitchPreference android:icon="@drawable/s_notify" android:title="@string/pref_autoNotify_screen_summary_sms_header" android:key="prefAutoNotify_sms_header" android:defaultValue="false" />
    <SwitchPreference android:title="@string/pref_other_notify_image" android:key="prefOthers_notify_image" android:defaultValue="true" />
    <SwitchPreference android:title="@string/pref_other_notify_bill_items" android:key="prefOthers_notify_bill_items" android:defaultValue="false" />
    <SwitchPreference android:title="@string/pref_autoSMS_date_screen_summary" android:key="prefAutoSMS_date" android:defaultValue="false" />
    <ListPreference android:entries="@array/notify_bill_type" android:title="@string/notify_bill_type" android:key="pref_notify_bill_type" android:defaultValue="1" android:positiveButtonText="@null" android:negativeButtonText="@null" android:entryValues="@array/notify_bill_typeValues" />
    <SwitchPreference android:icon="@drawable/s_whatsapp" android:title="@string/pref_autoSMS_wa_screen_summary" android:key="prefAutoSMS_wa" android:defaultValue="false" />
    <SwitchPreference android:icon="@drawable/s_mobile" android:title="@string/pref_autoSMS_screen_summary" android:key="prefAutoSMS" android:defaultValue="false" />
</PreferenceScreen>