<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@android:drawable/ic_menu_search" android:id="@id/search" android:title="@string/search" app:actionViewClass="androidx.appcompat.widget.SearchView" app:showAsAction="ifRoom|collapseActionView" />
    <item android:icon="@drawable/pdf" android:id="@id/bill_prin" android:title="@string/print" app:showAsAction="always" />
    <item android:icon="@drawable/ic_save1" android:id="@id/bill_submit" android:title="@string/save" app:showAsAction="always" />
    <item android:icon="@android:drawable/ic_menu_save" android:id="@id/bill_save" android:visible="false" android:title="Search" app:showAsAction="always" />
    <item android:icon="@android:drawable/ic_menu_delete" android:id="@id/bill_remove" android:title="@string/remove" app:showAsAction="never" />
    <item android:id="@id/share" android:orderInCategory="100" android:title="@string/share" app:showAsAction="never" />
    <item android:id="@id/printing" android:visible="true" android:orderInCategory="101" android:title="@string/print_bluetooth" app:showAsAction="never" />
    <item android:id="@id/offer_bill" android:visible="true" android:orderInCategory="102" android:title="@string/offer_to_bill" app:showAsAction="never" />
</menu>